<resources>
    <string name="app_name">HisabKitab</string>

    <!-- Login/Register Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="need_new_account"><u>Need new Account?</u></string>
    <string name="username">Username</string>
    <string name="register">Register</string>

    <!-- Join/Create Group Activity -->
    <string name="logout">Logout</string>
    <string name="join_group_message">Please join a group.</string>
    <string name="enter_group_code">Enter group code</string>
    <string name="qr_code_description">QR Code</string>
    <string name="join_group">Join Group</string>
    <string name="need_new_group_message"><u>Need a new group?</u></string>
    <string name="create_group_message">Create a Group.</string>
    <string name="group_name">Group Name</string>
    <string name="maximum_member">Max members</string>
    <string name="create">Create</string>

    <!-- Navigation Drawer/Header/Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="group_name_example">Hudson</string>
    <string name="group_code">Group Code</string>
    <string name="group_Code">Group Code:</string>
    <string name="code">123456</string>
    <string name="current_expenses">Current Expenses</string>
    <string name="group_expenses">Group Expenses</string>
    <string name="manage_group">Manage Group</string>
    <string name="group_qr_code">Group QR Code</string>

    <string name="about">About</string>
    <string name="app_version">v2.0</string>
    <string name="developed_by">Developed by:</string>
    <string name="app_developer">Susankya Team</string>

    <!-- CurrentExpenses -->
    <string name="id">ID</string>
    <string name="product_name">Product Name</string>
    <string name="amount">Amount</string>

    <!-- Group Expenses/Due History -->
    <string name="due_date_since">Due Date Since:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="each_amount">Each Amount:</string>
    <string name="date_example">28-September-2018</string>
    <string name="price_amount">0</string>
    <string name="total_spent">Total Spent</string>
    <string name="due_amount">Due Amount</string>
    <string name="clear_due">Clear Due</string>
    <string name="show_history">Show History</string>
    <string name="no_history_message">No history found!</string>

    <!-- Manage/Update Group Members Fragment -->
    <string name="signed_as">Signed as:</string>
    <string name="change_group_name">Change Group Name:</string>
    <string name="current">Current:</string>
    <string name="change_max_members">Change Max Members:</string>
    <string name="update_group_members">Update Group Members:</string>
    <string name="group_members">Group Members</string>
    <string name="action">Action</string>
    <string name="delete">Delete</string>
    <string name="delete_member_message">You\'re about to delete a member from the group. Are you sure want to do this?</string>

    <string name="name">Name</string>

    <!-- Group QR Code -->
    <string name="qr_code_message">Scan the QR code below to join group.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>