<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/group_name_et"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/dosis"
        android:padding="10dp"
        android:text="@string/create_group_message"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/group_name_et"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/group_max_members_et"
        android:background="@drawable/text_layout"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:hint="@string/group_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/group_max_members_et"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/text_layout"
        android:gravity="center"
        android:hint="@string/maximum_member"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/create_group_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_max_members_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_layout"
        android:text="@string/create" />

</RelativeLayout>

