<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_et"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/dosis"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_et"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/text_layout"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/text_layout"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_layout"
        android:text="@string/login" />

    <TextView
        android:id="@+id/create_new_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/dosis"
        android:padding="12dp"
        android:text="@string/need_new_account"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="20sp" />

</RelativeLayout>
