<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <include
        layout="@layout/toolbar_layout"/>

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textStyle="italic"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/username_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/app_name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:padding="12dp"
        android:hint="@string/name"
        android:textColor="@android:color/background_dark"
        android:background="@drawable/text_layout"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@id/username_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="@android:color/background_dark"
        android:background="@drawable/text_layout"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/email_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:hint="@string/password"
        android:textColor="@android:color/background_dark"
        android:background="@drawable/text_layout"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:background="@drawable/button_layout"/>

</RelativeLayout>
