<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_layout"
        android:fontFamily="@font/dosis"
        android:text="@string/logout"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/dosis"
        android:padding="10dp"
        android:text="@string/join_group_message"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerVertical="true"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <EditText
                android:id="@+id/group_code_et"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_layout"
                android:fontFamily="@font/dosis_book"
                android:gravity="center"
                android:hint="@string/enter_group_code"
                android:inputType="number"
                android:padding="15dp" />

            <ImageButton
                android:id="@+id/qr_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/group_code_et"
                android:contentDescription="@string/qr_code_description"
                android:src="@drawable/ic_qr_code" />

            <Button
                android:id="@+id/join_group_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_code_et"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_layout"
                android:fontFamily="@font/dosis"
                android:padding="15dp"
                android:text="@string/join_group"
                android:textSize="15sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/create_group_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/dosis"
        android:padding="10dp"
        android:text="@string/need_new_group_message"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

</RelativeLayout>

