<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_image_display"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/user_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_image_display"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/one"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/group_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/group_name"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_name_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/group_code"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/group_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_name_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/code"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</RelativeLayout>