<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DueHistory">

    <LinearLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/circular_bg"
            android:elevation="2dp"
            android:padding="4dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/progressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/history_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="Sorry! No Due History Found" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <RelativeLayout
            android:id="@+id/one"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/total_amount"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/each_amount"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/two"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner"
            android:layout_toEndOf="@id/one"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/due_history_total_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/price_amount"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/due_history_each_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:text="@string/price_amount"
                android:textSize="16sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@id/three"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/one"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/username"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/four"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/one"
            android:layout_toEndOf="@id/three"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/total_spent"
                android:textSize="17sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/one"
            android:layout_toEndOf="@id/four"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/due_amount"
                android:textSize="17sp" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/due_history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/three"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

</RelativeLayout>
